--- a/CustomerMP.UI/appsettings.json
+++ b/CustomerMP.UI/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "PGSQLConnectionString": "Server=localhost;Port=5432;User Id=postgres;Password=postgres;Database=Customer_MP;"
+    "PGSQLConnectionString": "host=localhost;port=5432;user id=postgres;password=postgres;database=Customer_MP;"
 
   }
 }
